objects/copado__Personal_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object stores the personal settings for Copado</description>
    <fields>
        <fullName>copado__API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__AccessStatusColumn__c</fullName>
        <inlineHelpText>Options are either &quot;dropdown&quot; or &quot;images&quot;</inlineHelpText>
        <label>AccessStatusColumn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Build_Task_Rows__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>This value determines the number of build task rows that should be displayed when viewing a Continuous Integration.</inlineHelpText>
        <label>Build Task Rows</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__DeployConnectionBox_height__c</fullName>
        <defaultValue>80</defaultValue>
        <label>DeployConnectionBox height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__DeployConnectionBox_width__c</fullName>
        <defaultValue>70</defaultValue>
        <label>DeployConnectionBox width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Disable_Auto_Resolve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Auto-Resolve from Online Conflict Resolution</description>
        <inlineHelpText>Disables Auto-Resolve from Online Conflict Resolution</inlineHelpText>
        <label>Disable Auto-Resolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Disable_Re_Create_Feature_Branch_in_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Re-Create Feature Branch in US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__MaskApiKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default is false to maintain compatibility. Only if the user changes it to true the API Key will be masked or replaced by a placeholder.</description>
        <label>Mask API Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Minimum_Logging_Level__c</fullName>
        <description>Minimum log level for copado processes. 0: TRACE, 1: DEBUG, 2: INFO, 3: WARN, 4: ERROR
Temporarily lower this value to get better information in the Result Objects when troubleshooting/developing a Multi-Cloud solution</description>
        <label>Minimum Logging Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Personal Settings</label>
</CustomObject>